[tool.poetry]
name        = "pip-packages"
version     = "0.1.0"
description = ""
authors     = ["Caian Ertl <hi@caian.org>"]

[tool.poetry.dependencies]
python     = "^3.9"
awscli     = "1.24.5"
bandit     = "1.7.4"
ciphey     = "5.14.0"
grip       = "4.6.1"
img2pdf    = "0.4.4"
invoke     = "1.7.1"
isort      = "5.10.1"
jedi       = "0.18.1"
pip-review = "1.1.1"
prospector = "1.7.7"
pydocstyle = "6.1.1"
pylint     = "2.13.9"
pynvim     = "0.4.3"
pywal      = "3.3.0"
qr         = "0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
