[tool.poetry]
name        = "pip-packages"
version     = "0.1.0"
description = ""
authors     = ["Caian Ertl <hi@caian.org>"]

[tool.poetry.dependencies]
python        = "^3.10"
awscli        = "1.27.1"
gitpython     = "3.1.29"
grip          = "4.6.1"
invoke        = "1.7.3"
pipenv        = "2022.12.19"
pynvim        = "0.4.3"
python-gitlab = "3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
